--- a/index.html
+++ b/index.html
@@ -6,12 +6,269 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/8692d91ea3.js"></script>
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=DM+Serif+Text|Lexend+Deca|Poppins:600&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/styles.css">
-    <title>Web 2 Template</title>
+    <title>Drexel Fly</title>
 </head>
 
 <body>
+
+    <main>
+        <header>
+            <section>
+                <img src="img/nav/logo.svg" alt="Logo">
+            </section>
+            <section>
+                <div>
+                    <section id="burger-container">
+                        <svg width="100" height="49" xmlns="http://www.w3.org/2000/svg">
+                            <g id="Page-1" fill="none" fill-rule="evenodd">
+                                <g id="Mobile" fill="#000">
+                                    <path id="bottomLine" d="M0 46h100v3H0z" />
+                                    <path id="middleLine" d="M0 23h100v3H0z" />
+                                    <path id="topLine" d="M0 0h100v3H0z" />
+                                </g>
+                            </g>
+                        </svg>
+                    </section>
+                </div>
+            </section>
+
+            <nav data-nav="main-navigation">
+                <ul>
+                    <li><a href="#">VISIT</a></li>
+                    <li><a href="#">TRAILS</a></li>
+                    <li><a href="#">EVENTS</a></li>
+                    <li><a href="#">FRIENDS</a></li>
+                    <li><a href="#">FAQ </a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <section id="hero">
+            <div>
+                <h1>FRIENDS OF THE WISSAHICKON <span>let's be friends.</span></h1>
+            </div>
+        </section>
+
+        <section id="visit" class="content-grid">
+            <div>
+                <h2>visiting the <span>WISSAHICKON VALLEY PARK</span></h2>
+                <p>Over 1.1 million annual visitors take advantage of the park’s abundant recreational opportunities. More than 50 miles of rugged trails offer hikers, mountain bikers, and equestrians the opportunity to explore the park’s dense
+                    forests, open meadows, and shaded creeks.</p>
+                <aside>
+                    <button type="button" name="WHAT TO DO"></button>
+                    <button type="button" name="WHERE TO GO"></button>
+                </aside>
+            </div>
+            <div>
+                <img src="img/visit/elements.svg" alt="Elements of the Trails">
+            </div>
+        </section>
+
+        <section id="plan">
+            <div>
+                <h2>plan a<span>VISIT</span></h2>
+            </div>
+            <div>
+                <div></div>
+                <div>
+                    <h3>HIKE</h3>
+                    <p>The Wissahickon Valley Park has more than 50 miles of hiking trails.</p>
+                </div>
+            </div>
+            <div>
+                <div></div>
+                <div>
+                    <h3>BIKE</h3>
+                    <p>Many bikers use Forbidden Drive, a flat gravel path with easy grades that is suitable for most types of bicycles.</p>
+                </div>
+            </div>
+            <div>
+                <div></div>
+                <div>
+                    <h3>RUN</h3>
+                    <p>While runners can be spotted on Wissahickon Valley Park’s upper trails, most prefer Forbidden Drive, the wide, flat gravel trail that parallels the creek for five miles, between Northwestern Avenue and Lincoln Drive.</p>
+                </div>
+            </div>
+            <div>
+                <!-- yellow svg hill -->
+            </div>
+        </section>
+
+        <section id="trail">
+
+            <!-- color bars -->
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+
+            <div>
+                <h2>plan a<span>VISIT</span></h2>
+            </div>
+            <div>
+                <div>
+                    <h3>Forbidden Drive</h3>
+                    <p>5.35 Miles <br>Average width 25 feet <br>Max obstacle height 3 inches <br>Average Grade: 3% <br>Wide, flat, multi-use gravel path</p>
+                    <p><span>VERY SCENIC</span></p>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <h3>White Trail</h3>
+                    <p>4.39 Miles <br>Average width 3 feet <br>Max obstacle height 24 inches <br>Average Grade: 10% <br>Single track, natural surface</p>
+                    <p><span>MOST POPULAR</span></p>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <h3>Orange Trail</h3>
+                    <p>5.64 Miles <br>Average width 3 feet <br>Max obstacle height 24 inches <br>Average Grade: 11% <br>Single track, natural surface </p>
+                    <p><span>BEST WORKOUT</span></p>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <h3>Yellow Trail</h3>
+                    <p>7.89 Miles <br>Average width 3 feet <br>Max obstacle height 24 inches <br>Average Grade: 9% <br>Single track, natural surface</p>
+                    <p><span>MOST AMBITIOUS</span></p>
+                </div>
+            </div>
+        </section>
+
+        <section id="gallery">
+            <div>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+        </section>
+
+
+        <section id="events">
+            <div>
+                <h2>upcoming<span>EVENTS</span></h2>
+            </div>
+            <div>
+                <div>
+                    <h3>Thursday Trail Service</h3>
+                    <p>August 15 <br>9:30 am – 12:30 pm</p>
+                </div>
+                <button type="button" name="REGISTER"></button>
+            </div>
+
+            <div>
+                <div>
+                    <h3>Fitness Hikes with Andi Wingert and Debbie Hoellein</h3>
+                    <p>August 13 <br>9:00 am – 11:30 am</p>
+                </div>
+                <button type="button" name="REGISTER"></button>
+            </div>
+
+            <div>
+                <div>
+                    <h3>Butterfly Safari with Kris Soffa, PA Master Naturalist</h3>
+                    <p>August 19 <br>10:00 am – 12:00 pm</p>
+                </div>
+                <button type="button" name="REGISTER"></button>
+            </div>
+        </section>
+
+        <section id="friend">
+            <div>
+                <h2>become<span>FRIEND</span></h2>
+                <p>Join our community of over 2,400 like-minded individuals who care for and support Wissahickon Valley Park, a community treasure of 1,800-acres of wooded gorge within the city of Philadelphia</p>
+            </div>
+            <div>
+                <ul>
+                    <li>
+                        <h3>PATRON</h3>
+                        <p><span>$500</span>Membership benefits <br>Hat or tee</p>
+                    </li>
+                    <li>
+                        <h3>SPONSOR</h3>
+                        <p><span>$250</span>Membership benefits <br>Hat or tee</p>
+                    </li>
+                    <li>
+                        <h3>CONTRIBUTING</h3>
+                        <p><span>$100</span>Membership benefits <br>Hat or tee</p>
+                    </li>
+                    <li>
+                        <h3>FAMILY</h3>
+                        <p><span>$75</span>Membership benefits <br>2 Children's tee</p>
+                    </li>
+                    <li>
+                        <h3>BASIC</h3>
+                        <p><span>$45</span>Invites to all events <br>Park map</p>
+                    </li>
+                    <li>
+                        <h3>STUDENT</h3>
+                        <p><span>$20</span>Invites to all events <br>Member discounts</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="faq">
+            <div>
+                <h2>about us<span>FAQ</span></h2>
+            </div>
+            <div>
+                <ul>
+                    <li>
+                        <h3>HOW DO I GET TO THE PARK?</h3>
+                        <p>Because Wissahickon Valley Park is so large, there is not a single street address for it. There are several entrances with free parking throughout the park, which can be seen on <span>this Google Map</span>.</p>
+                    </li>
+                    <li>
+                        <h3>HOW CAN I GET A MAP OF THE PARK?</h3>
+                        <p>FOW publishes a <span>detailed fold-out map</span> of the valley that shows trails, landmarks, entrances, parking, and other points of interest.</p>
+                    </li>
+                    <li>
+                        <h3>HOW MANY MILES OF TRAILS ARE THERE IN THE WISSAHICKON?</h3>
+                        <p>Wissahickon Valley Park has approximately 50 miles of trails.</p>
+                    </li>
+                    <li>
+                        <button type="button" name="MORE FAQ"></button>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <!-- green svg hill -->
+            </div>
+        </section>
+
+
+        <section id="contact">
+            <div>
+                <h1>TALK TO US</h1>
+                <div>
+                    <p>Name</p>
+                    <p>Email</p>
+                    <p>Message</p>
+                    <a href="#" class="button">SEND</a>
+                </div>
+            </div>
+        </section>
+
+
+        <footer>
+            <h1>stay up with our news and all kinds of trail things</h1>
+            <ul>
+                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+            </ul>
+            <button type="button" name="SUBSCRIBE"></button>
+        </footer>
+    </main>
 
 
     <!-- jQuery -->
