--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
             <div>
                 <h1>TALK TO US</h1>
                 <div>
-                    <p>Name</p>
-                    <p>Email</p>
-                    <p>Message</p>
+                    <input type="text" placeholder="Name" required>
+                    <input type="text" placeholder="Email" required>
+                    <input type="text" placeholder="Message" required>
                     <a href="#" class="button">SEND</a>
                 </div>
             </div>
