--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
         <section id="friend">
             <div>
-                <h2>become<span>FRIEND</span></h2>
+                <h2>become a<span>FRIEND</span></h2>
                 <p>Join our community of over 2,400 like-minded individuals who care for and support Wissahickon Valley Park, a community treasure of 1,800-acres of wooded gorge within the city of Philadelphia</p>
             </div>
             <div>
