--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Text|Lexend+Deca|Poppins:600&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/styles.css">
-    <title>Drexel Fly</title>
+    <title>Friends of the Wissahickon</title>
 </head>
 
 <body>
@@ -49,21 +49,25 @@
         </header>
 
         <section id="hero">
+            <div></div>
             <div>
-                <h1>FRIENDS OF THE WISSAHICKON <span>let's be friends.</span></h1>
+                <h1>FRIENDS OF THE WISSAHICKON <br><span>let's be friends.</span></h1>
             </div>
         </section>
 
-        <section id="visit" class="content-grid">
+        <section id="visit">
             <div>
-                <h2>visiting the <span>WISSAHICKON VALLEY PARK</span></h2>
+                <h2>visiting the <br><span>WISSAHICKON VALLEY PARK</span></h2>
+            </div>
+            <div>
                 <p>Over 1.1 million annual visitors take advantage of the park’s abundant recreational opportunities. More than 50 miles of rugged trails offer hikers, mountain bikers, and equestrians the opportunity to explore the park’s dense
                     forests, open meadows, and shaded creeks.</p>
                 <aside>
-                    <button type="button" name="WHAT TO DO"></button>
-                    <button type="button" name="WHERE TO GO"></button>
+                    <button type="button" name="WHAT TO DO">WHAT TO DO</button>
+                    <button type="button" name="WHERE TO GO">WHERE TO GO</button>
                 </aside>
             </div>
+
             <div>
                 <img src="img/visit/elements.svg" alt="Elements of the Trails">
             </div>
@@ -71,31 +75,30 @@
 
         <section id="plan">
             <div>
-                <h2>plan a<span>VISIT</span></h2>
+                <h2>plan a <br><span>VISIT</span></h2>
             </div>
             <div>
-                <div></div>
-                <div>
-                    <h3>HIKE</h3>
-                    <p>The Wissahickon Valley Park has more than 50 miles of hiking trails.</p>
-                </div>
-            </div>
-            <div>
-                <div></div>
-                <div>
-                    <h3>BIKE</h3>
-                    <p>Many bikers use Forbidden Drive, a flat gravel path with easy grades that is suitable for most types of bicycles.</p>
-                </div>
-            </div>
-            <div>
-                <div></div>
-                <div>
-                    <h3>RUN</h3>
-                    <p>While runners can be spotted on Wissahickon Valley Park’s upper trails, most prefer Forbidden Drive, the wide, flat gravel trail that parallels the creek for five miles, between Northwestern Avenue and Lincoln Drive.</p>
-                </div>
-            </div>
-            <div>
-                <!-- yellow svg hill -->
+                <aside>
+                    <div></div>
+                    <div>
+                        <h3>Hike</h3>
+                        <p>The Wissahickon Valley Park has more than 50 miles of hiking trails.</p>
+                    </div>
+                </aside>
+                <aside>
+                    <div></div>
+                    <div>
+                        <h3>Bike</h3>
+                        <p>Many bikers use Forbidden Drive, a flat gravel path with easy grades that is suitable for most types of bicycles.</p>
+                    </div>
+                </aside>
+                <aside>
+                    <div></div>
+                    <div>
+                        <h3>Run</h3>
+                        <p>While runners can be spotted on Wissahickon Valley Park’s upper trails, most prefer Forbidden Drive, the wide, flat gravel trail that parallels the creek for five miles, between Northwestern Avenue and Lincoln Drive.</p>
+                    </div>
+                </aside>
             </div>
         </section>
 
@@ -108,36 +111,37 @@
             <div></div>
 
             <div>
-                <h2>plan a<span>VISIT</span></h2>
+                <h2>choose your <br><span>TRAIL</span></h2>
             </div>
             <div>
                 <div>
                     <h3>Forbidden Drive</h3>
                     <p>5.35 Miles <br>Average width 25 feet <br>Max obstacle height 3 inches <br>Average Grade: 3% <br>Wide, flat, multi-use gravel path</p>
-                    <p><span>VERY SCENIC</span></p>
+                    <span>VERY SCENIC</span>
                 </div>
             </div>
             <div>
                 <div>
                     <h3>White Trail</h3>
                     <p>4.39 Miles <br>Average width 3 feet <br>Max obstacle height 24 inches <br>Average Grade: 10% <br>Single track, natural surface</p>
-                    <p><span>MOST POPULAR</span></p>
+                    <span>MOST POPULAR</span>
                 </div>
             </div>
             <div>
                 <div>
                     <h3>Orange Trail</h3>
                     <p>5.64 Miles <br>Average width 3 feet <br>Max obstacle height 24 inches <br>Average Grade: 11% <br>Single track, natural surface </p>
-                    <p><span>BEST WORKOUT</span></p>
+                    <span>BEST WORKOUT</span>
                 </div>
             </div>
             <div>
                 <div>
                     <h3>Yellow Trail</h3>
                     <p>7.89 Miles <br>Average width 3 feet <br>Max obstacle height 24 inches <br>Average Grade: 9% <br>Single track, natural surface</p>
-                    <p><span>MOST AMBITIOUS</span></p>
+                    <span>MOST AMBITIOUS</span>
                 </div>
             </div>
+            <aside></aside>
         </section>
 
         <section id="gallery">
@@ -150,66 +154,70 @@
                     <li></li>
                 </ul>
             </div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </section>
 
 
         <section id="events">
             <div>
-                <h2>upcoming<span>EVENTS</span></h2>
+                <h2>upcoming <br><span>EVENTS</span></h2>
             </div>
             <div>
                 <div>
-                    <h3>Thursday Trail Service</h3>
+                    <h3>Thursday trail service</h3>
                     <p>August 15 <br>9:30 am – 12:30 pm</p>
                 </div>
-                <button type="button" name="REGISTER"></button>
+                <button type="button" name="REGISTER">REGISTER</button>
             </div>
 
             <div>
                 <div>
-                    <h3>Fitness Hikes with Andi Wingert and Debbie Hoellein</h3>
+                    <h3>Fitness hikes with Andi Wingert and Debbie Hoellein</h3>
                     <p>August 13 <br>9:00 am – 11:30 am</p>
                 </div>
-                <button type="button" name="REGISTER"></button>
+                <button type="button" name="REGISTER">REGISTER</button>
             </div>
 
             <div>
                 <div>
-                    <h3>Butterfly Safari with Kris Soffa, PA Master Naturalist</h3>
+                    <h3>Butterfly safari with Kris Soffa, PA master naturalist</h3>
                     <p>August 19 <br>10:00 am – 12:00 pm</p>
                 </div>
-                <button type="button" name="REGISTER"></button>
+                <button type="button" name="REGISTER">REGISTER</button>
             </div>
         </section>
 
-        <section id="friend">
+        <section id="friends">
             <div>
-                <h2>become a<span>FRIEND</span></h2>
+                <h2>become a <br><span>FRIEND</span></h2>
                 <p>Join our community of over 2,400 like-minded individuals who care for and support Wissahickon Valley Park, a community treasure of 1,800-acres of wooded gorge within the city of Philadelphia</p>
             </div>
             <div>
                 <ul>
-                    <li>
+                    <li class="friend-card">
                         <h3>PATRON</h3>
-                        <p><span>$500</span>Membership benefits <br>Hat or tee</p>
+                        <p><span>$500</span> <br>Membership benefits <br>Hat or tee</p>
                     </li>
-                    <li>
+                    <li class="friend-card">
                         <h3>SPONSOR</h3>
-                        <p><span>$250</span>Membership benefits <br>Hat or tee</p>
+                        <p><span>$250</span> <br>Membership benefits <br>Hat or tee</p>
                     </li>
-                    <li>
+                    <li class="friend-card">
                         <h3>CONTRIBUTING</h3>
-                        <p><span>$100</span>Membership benefits <br>Hat or tee</p>
+                        <p><span>$100</span> <br>Membership benefits <br>Hat or tee</p>
                     </li>
-                    <li>
+                    <li class="friend-card">
                         <h3>FAMILY</h3>
-                        <p><span>$75</span>Membership benefits <br>2 Children's tee</p>
-                    </li>
-                    <li>
+                        <p><span>$75</span> <br>Membership benefits <br>2 Children's tee</p>
+                    </li class="friend-card">
+                    <li class="friend-card">
                         <h3>BASIC</h3>
-                        <p><span>$45</span>Invites to all events <br>Park map</p>
+                        <p><span>$45</span> <br>Invites to all events <br>Park map</p>
                     </li>
-                    <li>
+                    <li class="friend-card">
                         <h3>STUDENT</h3>
                         <p><span>$20</span>Invites to all events <br>Member discounts</p>
                     </li>
@@ -219,9 +227,17 @@
 
         <section id="faq">
             <div>
-                <h2>about us<span>FAQ</span></h2>
+                <h2>about us <br><span>FAQ</span></h2>
             </div>
             <div>
+                <div class="circles">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
                 <ul>
                     <li>
                         <h3>HOW DO I GET TO THE PARK?</h3>
@@ -236,13 +252,11 @@
                         <p>Wissahickon Valley Park has approximately 50 miles of trails.</p>
                     </li>
                     <li>
-                        <button type="button" name="MORE FAQ"></button>
+                        <button type="button" name="MORE FAQ">MORE FAQ</button>
                     </li>
                 </ul>
             </div>
-            <div>
-                <!-- green svg hill -->
-            </div>
+            <aside></aside>
         </section>
 
 
@@ -253,7 +267,7 @@
                     <input type="text" placeholder="Name" required>
                     <input type="text" placeholder="Email" required>
                     <input type="text" placeholder="Message" required>
-                    <a href="#" class="button">SEND</a>
+                    <button type="button" name="SEND">SEND</button>
                 </div>
             </div>
         </section>
@@ -262,11 +276,14 @@
         <footer>
             <h1>stay up with our news and all kinds of trail things</h1>
             <ul>
-                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
             </ul>
-            <button type="button" name="SUBSCRIBE"></button>
+            <div>
+                <button type="button" name="SUBSCRIBE">SUBSCRIBE</button>
+            </div>
+            <!-- <aside></aside> -->
         </footer>
     </main>
 
