--- a/index.html
+++ b/index.html
@@ -200,6 +200,15 @@
 
         <section id="friends">
             <div>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div>
                 <h2>become a <br><span>FRIEND</span></h2>
                 <p>Join our community of over 2,400 like-minded individuals who care for and support Wissahickon Valley Park, a community treasure of 1,800-acres of wooded gorge within the city of Philadelphia</p>
             </div>
